--- a/app/CheckPassword.css
+++ b/app/CheckPassword.css
@@ -27,10 +27,10 @@
 }
 .Strong {
     width: 100%;
-    background-color: #d39e00;
+    background-color: #0062d3;
     margin-top: 5px;
     height: 3px;
-    color: #d39e00;
+    color: #0062d3;
     font-weight: 500;
     font-size: 12px;
 }
